# encode

./: .gitignore  CMakeLists.txt  README.md
src/: encode.c  encode.h
